8 rules fixed Fixed 1 Lambdas containing only one statement should not nest this statement in a block Fixed 1Ternary operators should not be be nested Fixed 1 Unused locals variables should be removed Fixed 1Section of code should not be commented out Fixed 1 StandardCharset constants should be preferred Fixed 1instance methods should not write to static fields Fixed 1Lambdas should be remplaced with method references Fixed 1Abstract class should be interface